[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse"
version = "0.2.0"
description = "YouTube channel monitor with Telegram bot and AI summaries"
requires-python = ">=3.11"
dependencies = [
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    # Config
    "pydantic-settings>=2.0.0",
    # HTTP client
    "httpx[socks]>=0.27.0",
    "requests[socks]>=2.31.0",
    # Scheduler
    "apscheduler>=3.10.4",
    # Telegram bot
    "python-telegram-bot>=21.0",
    # LLM — OpenAI-compatible client (DeepSeek)
    "openai>=1.30.0",
    # YouTube
    "google-api-python-client>=2.100.0",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
